fix: Adjust z-index for multiselect and improve navbar menu collapse behavior before print

--- a/css/index.css
+++ b/css/index.css
@@ -414,7 +414,7 @@ select.multiselect {
     min-width: 150px;
     box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 6px;
     /* width: 150px; */
-    z-index: 999999; 
+    z-index: 999; 
 }
 
 #navbarMenu .nav-item {
